--- a/rbac/patch-operator/cr.yaml
+++ b/rbac/patch-operator/cr.yaml
@@ -13,3 +13,18 @@ rules:
       - list
       - delete
       - patch
+  # Patch operator:
+  # The lookup function, if used by the template, is executed with a client which impersonates the user 
+  # issuing the object creation/update request. This should prevent security permission leakage.
+  #
+  # This means argocd app controller SA will need to be apple to CRUD machinesets
+  - apiGroups:
+      - machine.openshift.io
+    resources:
+      - machinesets
+    verbs:
+      - update
+      - create
+      - list
+      - delete
+      - patch
