--- a/machinesets-jobs/templates/vsphere-machineconfigpool.yaml
+++ b/machinesets-jobs/templates/vsphere-machineconfigpool.yaml
@@ -3,6 +3,10 @@ apiVersion: machineconfiguration.openshift.io/v1
 kind: MachineConfigPool
 metadata:
   name: storage
+  labels:
+    app.kubernetes.io/instance: {{ .Release.Name }}
+  annotations:
+    app.kubernetes.io/instance: {{ .Release.Name }}
 spec:
   machineConfigSelector:
     matchExpressions:
